Fix day header color change on calendar visibility

--- a/frontend/src/components/ThreeDayContentGrid/ThreeDayContentGrid.module.css
+++ b/frontend/src/components/ThreeDayContentGrid/ThreeDayContentGrid.module.css
@@ -1,3 +1,7 @@
+.entityLabelRow {
+    background-color: var(--header-background-color);
+}
+
 .entityLabelRowExpanded {
     background-color: var(--body-background-color);
     padding-top: 8px;
